feat(api enhancements): model-pvs, cde-pvs
Refactored bento_sts.mdb instance into the config dict
- changes in main/routes.py and api/routes.py ensued
Added new paths for model-pvs, cde-pvs to query_paths.yml
- added a new 'return block' keys: _query and _params
  to enable "verbatim" query creation by _engine.py
- the additional query methods in mdb.py are _not used_
  to generate queries
Updated OpenAPI schema ('swagger.yaml') to include new queries
Added test_routes.py to test query paths in Flask test client
